fix swiper buttons for essay and mm; fix expand button z-index

--- a/cigionline/static/themes/space_series/css/_article_page.scss
+++ b/cigionline/static/themes/space_series/css/_article_page.scss
@@ -216,6 +216,7 @@
       }
       margin-right: 1em;
       transition: transform 0.2s ease;
+      z-index: 1;
 
       &.expanded {
         transform: rotate(45deg);
